selecting with shift + arrow and then inserting text doesn't overwrite GtkEntry content
In GtkEntry, selecting the text using shift + arrow keys, and typing in something inserts the test just before the selection start, and not replacing the selected text. This has been tested on X11, in case that matters.
How to reproduce:
- open gtk4-demo entry buffer:
gtk4-demo --run=entry_buffer
- Type in some text
- Press Shift + left arrow key (once or more)
- Now type some characters.
Result: The selected text isn't replaced, and the characters typed are inserted before the selection